--- a/pag3.html
+++ b/pag3.html
@@ -93,7 +93,7 @@
 
     <!-- Pie de página -->
     <footer>
-        <p>© 2025 Noticias de Videojuegos</p>
+        <p>© 2025 NotiPlay</p>
     </footer>
 </body>
 </html>
